# potato-framework

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
potato/: application.cpp  application.h  application.hpp  apply_license.sh  datatables.cpp  datatables.h  datatables.hpp  default.pro.file  header_file.h  main.cpp  utils.cpp  utils.h  utils.hpp  utils.inl  world.cpp  world.h  world.hpp
potato/GUI/: button.cpp  button.h  button.hpp  container.cpp  container.h  container.hpp  label.cpp  label.h  label.hpp  lineedit.cpp  lineedit.h  lineedit.hpp  widget.cpp  widget.h  widget.hpp
potato/controllers/: playercontroller.cpp  playercontroller.h  playercontroller.hpp
potato/entities/: emitternode.cpp  emitternode.h  emitternode.hpp  entity.cpp  entity.h  entity.hpp  particlenode.cpp  particlenode.h  particlenode.hpp  quadtree.cpp  quadtree.h  quadtree.hpp  scenenode.cpp  scenenode.h  scenenode.hpp  soundnode.cpp  soundnode.h  soundnode.hpp  spritenode.cpp  spritenode.h  spritenode.hpp  textnode.cpp  textnode.h  textnode.hpp
potato/events/: category.h  category.hpp  command.cpp  command.h  command.hpp  commandqueue.cpp  commandqueue.h  commandqueue.hpp
potato/lua/: SLB.cpp  SLB.hpp  luaexposal.cpp  luaexposal.h  lunar.h
potato/resources/: affectors.cpp  affectors.h  affectors.hpp  animation.cpp  animation.hpp  musicplayer.cpp  musicplayer.h  musicplayer.hpp  particle.cpp  particle.hpp  resourceholder.h  resourceholder.hpp  resourceidentifiers.h  resourceidentifiers.hpp  scriptplayer.cpp  scriptplayer.h  scriptplayer.hpp  soundplayer.cpp  soundplayer.h  soundplayer.hpp
potato/states/: paralleltask.cpp  paralleltask.h  paralleltask.hpp  state.cpp  state.h  state.hpp  stateidentifiers.hpp  statestack.cpp  statestack.h  statestack.hpp  titlestate.cpp  titlestate.cpp.autosave  titlestate.h  titlestate.hpp
potato/utils/: json.hpp
potato/utils/nlohmann/: json.hpp
tests/: tests.cpp
tests/utils/: json.cpp
